[gd_scene load_steps=17 format=3 uid="uid://icd2kyuikf4i"]

[ext_resource type="Theme" uid="uid://brjmx5njm0nr7" path="res://main_color_theme.tres" id="1_7vrkn"]
[ext_resource type="LabelSettings" uid="uid://cdh24giocun8g" path="res://menu_label_settings.tres" id="2_fu7sn"]
[ext_resource type="Script" uid="uid://ofip0oi7lukp" path="res://main_menu.gd" id="2_glbon"]
[ext_resource type="PackedScene" uid="uid://c8ld6j5d137lp" path="res://player.tscn" id="2_jix8l"]
[ext_resource type="Script" uid="uid://da4w5brfdwa7q" path="res://landing_screen.gd" id="3_8qtwp"]
[ext_resource type="Material" uid="uid://33a40lpvwlh5" path="res://blackMat.tres" id="3_glbon"]
[ext_resource type="AudioStream" uid="uid://b2m4rl8nwsopt" path="res://sfx/georgeHadCompanyMusic.wav" id="5_glbon"]
[ext_resource type="Script" uid="uid://bnrfgf52ti17r" path="res://audio_settings.gd" id="5_qe12f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.0383972, 0.0383972, 0.0383971, 1)

[sub_resource type="Gradient" id="Gradient_jix8l"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_glbon"]
gradient = SubResource("Gradient_jix8l")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_nlkkf"]
offsets = PackedFloat32Array(0.792373, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qe12f"]
gradient = SubResource("Gradient_nlkkf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_glbon"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 300, 600)
direction = Vector3(0, 0, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = 80.0
initial_velocity_max = 126.88
gravity = Vector3(0, 55, 0)
color_ramp = SubResource("GradientTexture1D_qe12f")

[sub_resource type="LabelSettings" id="LabelSettings_glbon"]
font_size = 126

[sub_resource type="Environment" id="Environment_jix8l"]
background_mode = 1
background_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
ambient_light_source = 2
ambient_light_color = Color(0.259138, 0.18671, 0.23491, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7vrkn")
script = ExtResource("2_glbon")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7vrkn")
theme_override_styles/panel = SubResource("StyleBoxFlat_jix8l")

[node name="LandingScreen" type="Control" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_8qtwp")

[node name="BackgroundParticles" type="GPUParticles2D" parent="PanelContainer/LandingScreen"]
position = Vector2(971, 532)
amount = 2
amount_ratio = 0.5
texture = SubResource("GradientTexture2D_glbon")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_glbon")

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/LandingScreen"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 200

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/LandingScreen/MarginContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 126
text = "George 
Had 
Company"
label_settings = SubResource("LabelSettings_glbon")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Display" type="Node3D" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="RotateParent" type="Node3D" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display"]

[node name="Player" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display/RotateParent" instance=ExtResource("2_jix8l")]

[node name="CSGBox3D" type="CSGBox3D" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display/RotateParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, -0.005)
material_override = ExtResource("3_glbon")
use_collision = true
size = Vector3(2, 0.25, 2)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display"]
transform = Transform3D(0.924719, 1.66388e-08, -0.380651, 0.380651, -4.04207e-08, 0.924719, -1.53843e-15, -1, -4.37114e-08, 0, 2.70277, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display"]
environment = SubResource("Environment_jix8l")

[node name="Camera3D" type="Camera3D" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/SubViewportContainer/SubViewport/Display"]
transform = Transform3D(0.707107, -0.183013, 0.683013, 0, 0.965926, 0.258819, -0.707107, -0.183013, 0.683013, 2.50558, 1.09859, 2.41936)
current = true
fov = 83.9

[node name="OptionsContainer" type="Control" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Highlight" type="ColorRect" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer"]
unique_name_in_owner = true
layout_mode = 0

[node name="TopArrow" type="Label" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/Highlight"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 2
text = "▲"

[node name="BottomArrow" type="Label" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/Highlight"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 2
text = "▼"

[node name="MenuContainer" type="MarginContainer" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="OptionStart" type="Button" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu"]
layout_mode = 2
theme = ExtResource("1_7vrkn")
text = "Start"
alignment = 0

[node name="OptionSelect" type="Button" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu"]
layout_mode = 2
text = "Level Select"
alignment = 0

[node name="OptionAudio" type="Button" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu"]
layout_mode = 2
text = "Audio"
alignment = 0

[node name="OptionInput" type="Button" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu"]
layout_mode = 2
text = "Controls"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PanelContainer/LandingScreen"]
bus = &"SFX"

[node name="AudioSettings" type="Control" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("5_qe12f")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/AudioSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/AudioSettings/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/AudioSettings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Audio"
label_settings = ExtResource("2_fu7sn")

[node name="BackgroundMusic" type="Label" parent="PanelContainer/AudioSettings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Background Music"
label_settings = ExtResource("2_fu7sn")

[node name="BGMVolume" type="HSlider" parent="PanelContainer/AudioSettings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SfxMusic" type="Label" parent="PanelContainer/AudioSettings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "SFX"
label_settings = ExtResource("2_fu7sn")

[node name="SFXVolume" type="HSlider" parent="PanelContainer/AudioSettings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainThemePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_glbon")
volume_db = -10.0
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu/OptionStart" to="." method="_on_option_start_pressed"]
[connection signal="pressed" from="PanelContainer/LandingScreen/MarginContainer3/HBoxContainer/OptionsContainer/MenuContainer/Menu/OptionAudio" to="." method="_on_option_audio_pressed"]
